Fix todo onBlur and weekly plan jump out

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,18 +21,28 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 
   overflow-y: hidden;
+
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+.weekly-plan-card {
+  transform: translate3d(90%, 0, 0);
+  transition: transform .4s cubic-bezier(1, 0, 0, 1);
+
+}
+
+@layer utilities {
+  .transform-hover {
+    transform: translate3d(0, 0, 0);
   }
 }
